--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         <div class="text">
             <h2>A ação humana tem afetado há décadas a formação de gelo marítimo nos polos do planeta. E agora?</h2>
                 
-                <h4><strong>Um projeto do <a href=“http://voltdata.info”>Volt Data Lab</a></strong> | set/2015 </h4>
+                <h4><strong>Um projeto do <a href="http://voltdata.info">Volt Data Lab</a></strong> | set/2015 </h4>
                     
             <!-- Go to www.addthis.com/dashboard to customize your tools -->
     <div class="addthis_sharing_toolbox"></div>
