--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             <link href='https://fonts.googleapis.com/css?family=Exo' rel='stylesheet' type='text/css'>
             <link href='https://fonts.googleapis.com/css?family=Oswald:700' rel='stylesheet' type='text/css'>
             <link href='https://fonts.googleapis.com/css?family=Roboto:300' rel='stylesheet' type='text/css'>
+            <link href='https://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>       
             <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 
 
@@ -26,11 +27,11 @@
             <meta name='robots' content='index,follow'>
             <meta name='revised' content='12 de de setembro de 2015'>
             <meta name='author' content='Volt Data Lab'>
-            <meta name='designer' content=''>
+            <meta name='designer' content='Fabio Aleixo'>
             <meta name='reply-to' content='info@voltdata.info'>
-            <meta name='owner' content=''>
+            <meta name='owner' content='Volt Data Lab'>
             <meta name='url' content='http://especiais.voltdata.info/especial_gelo'>
-            <meta name='identifier-URL' content='http://passaralhos.voltdata.info'>
+            <meta name='identifier-URL' content=''>
             <meta name='pagename' content='A Conta dos Passaralhos'>
             <meta name='coverage' content='Brasil'>
             <meta name='distribution' content='Global'>
@@ -111,7 +112,7 @@
 
                 <!-- INFOGRÁFICO INTERATIVO -->
 
-                 <iframe class="highcharts-iframe" src="//cloud.highcharts.com/embed/emonyr" style="border: 0; padding-bottom:0px; width: 100%; height: 500px"></iframe>   
+                 <iframe class="highcharts-iframe" src="//cloud.highcharts.com/embed/emonyr" style="border: 0; padding-bottom:0px; width: 100%; height: 500px" frameborder></iframe>   
 
 
 
@@ -156,7 +157,7 @@
                  <!-- VÍDEO -->
 
 
-                <div class="video"> <iframe src="https://player.vimeo.com/video/63592172?title=0&portrait=0" width="100%" height="393" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> </div>
+                <div class="video"> <iframe src="https://player.vimeo.com/video/63592172?title=0&portrait=0" width="100%" height="393" frameborder="1" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> </div>
                 
 
                  <!-- FIM DO VÍDEO -->
@@ -381,3 +382,4 @@
             </script>
 
         </body>
+</html>
